@@ -3,10 +3,10 @@ plugins {
     id("io.qameta.allure") version "2.11.2"
 }
 
-//java {
-//    sourceCompatibility = JavaVersion.VERSION_17
-//    targetCompatibility = JavaVersion.VERSION_17
-//}
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 
 group = "qamaster"
 version = "1.0"
@@ -24,6 +24,11 @@ dependencies {
     implementation("org.slf4j:slf4j-api:2.0.0")
     implementation("io.qameta.allure:allure-java-commons:2.23.0")
     implementation("org.eclipse.persistence:javax.persistence:2.2.1")
+
+    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.2")
+    implementation("com.fasterxml.jackson.core:jackson-core:2.15.2")
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
+
 
     implementation("org.springframework:spring-context:6.0.11")
     implementation("org.springframework.boot:spring-boot-starter:3.1.2")
@@ -47,6 +52,8 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+    jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
 }
 
 // Allure configuration
